--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                                     <i class="bi bi-envelope-fill"></i>
                                     <div class="bdy1">
                                         <h5>Email</h5>
-                                        <a href="">schoolmail@gmail.com</a>
+                                        <a href="">primaglsa01@gmail.com</a>
                                     </div>
                                 </div>
                                 <div class="card-contact mt-4">
@@ -163,7 +163,7 @@
     <!-- about-us -->
     <section id="about" class="bg-dark text-light">
         <div class="container pt-3 pb-3">
-            <h2 class="text-center">Abou Us</h2>
+            <h2 class="text-center">About Us</h2>
             <div class="row row-cols-md-2 pt-3">
                 <div class="bg-img" style="background-image: url('./asset/img/school.jpg');"></div>
                 <div>
