--- a/index.html
+++ b/index.html
@@ -221,6 +221,15 @@
                 </div>
                 <div class="col">
                     <div class="card h-100">
+                        <img src="./asset/img/Maria.jpg" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Ms Maria</h5>
+                            <p class="card-text">Teacher</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
                         <img src="./asset/img/ida.JPG" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ida</h5>
