--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3" aria-label="Slide 4"></button>
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image bg-img-1 active">
@@ -72,6 +73,13 @@
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-3">
+                    <div class="carousel-caption d-md-block">
+                        <h1>Ready to turbocharge your career or academic path? </h1>
+                        <p>Prima German Language School got you covered </p>
+                        <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
+                    </div>
+                </div>
+                <div class="carousel-item carousel-image bg-img-4">
                     <div class="carousel-caption d-md-block">
                         <h1>Ready to turbocharge your career or academic path? </h1>
                         <p>Prima German Language School got you covered </p>
