--- a/index.html
+++ b/index.html
@@ -24,23 +24,15 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#info">Info</a>
                     </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#cours-level" role="button" data-bs-toggle="dropdown" aria-expanded="false">Cours-Level</a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">M-Cours</a></li>
-                            <li><a class="dropdown-item" href="#">T-Cours</a></li>
-                            <li><a class="dropdown-item" href="#">W-Cours</a></li>
-                            <li><a class="dropdown-item" href="#">G/S-Cours</a></li>
-                        </ul>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#info">Price</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#info">Application</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#info">Price</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#info">Application</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
 
                 </ul>
             </div>
@@ -60,29 +52,29 @@
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image bg-img-1 active">
                     <div class="carousel-caption d-md-block d-xs-block">
-                        <p>Guten Tag! Wilkommen bei der</p>
-                        <h1>Prima German Language school in Abuja!</h1>
+                        <p class="p-size">Guten Tag! Wilkommen bei der</p>
+                        <h1>Prima German Language School in Abuja!</h1>
                         <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-2">
                     <div class="carousel-caption d-md-block">
                         <h1>Prima German Language school</h1>
-                        <p>Unlock Opportunities with Our German Language School in Abuja!</p>
+                        <p class="p-size">Unlock Opportunities with Our German Language School in Abuja!</p>
                         <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-3">
                     <div class="carousel-caption d-md-block">
                         <h1>Ready to turbocharge your career or academic path? </h1>
-                        <p>Prima German Language School got you covered </p>
+                        <p class="p-size">Prima German Language School got you covered </p>
                         <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-4">
                     <div class="carousel-caption d-md-block">
-                        <h1>Ready to turbocharge your career or academic path? </h1>
-                        <p>Prima German Language School got you covered </p>
+                        <h1>Participate more Effectively and Responsibly in a Multi-Cultural World </h1>
+                        <p class="p-size">Prima German Language School got you covered </p>
                         <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
                     </div>
                 </div>
@@ -105,27 +97,27 @@
                 <div class="col">
                     <div class="card row-col-md-8 h-100">
                         <div class="card-header">
-                            <h5>The school offers</h5>
+                            <h5>The School Offers</h5>
                         </div>
                         <div class="card-body">
                             <div class="card-items">
                                 <i class="bi bi-mortarboard-fill"></i>
                                 <div class="bdy1">
-                                    <h5>HYBRID COURSES</h5>
+                                    <h5>Hybrid Courses</h5>
                                     <p>A combination of Online and Face-to-Face instructions in our classroom in Jabi</p>
                                 </div>
                             </div>
                             <div class="card-items">
                                 <i class="bi bi-people-fill"></i>
                                 <div class="bdy1">
-                                    <h5>TEAM</h5>
-                                    <p>Our team of teachers consists of mother tongue and high-level experienced professionals </p>
+                                    <h5>Team</h5>
+                                    <p>Our team of teachers consists of mother tongue speakers and experienced professionals</p>
                                 </div>
                             </div>
                             <div class="card-items">
                                 <i class="bi bi-patch-check-fill"></i>
                                 <div class="bdy1">
-                                    <h5>EXAM PREPARATION</h5>
+                                    <h5>Exam Preparation</h5>
                                     <p>We specifically prepare for exams and language certificate</p>
                                 </div>
                             </div>
@@ -140,9 +132,8 @@
                         <div class="card-body text-left">
                             <p class="card-text">Interview to tailor your course to individual language level of the student.</p>
                             <p class="card-text">Advise on the level needed for your specific career path</p>
-                            <p class="card-text">Trail class with a money-back guarantee
-                            </p>
-                            <h6 class="text-danger">FOR PRICES AND APPLICATION PLEASE CONTACT THE ADMIN</h6>
+                            <p class="card-text">Trial class free of charge</p>
+                            <h6 class="text-danger">For further information please contact the Admin Office</h6>
                             <div class="card-body mb-5">
                                 <div class="card-contact mt-4">
                                     <i class="bi bi-envelope-fill"></i>
@@ -171,7 +162,7 @@
     <!-- about-us -->
     <section id="about" class="bg-dark text-light">
         <div class="container pt-3 pb-3">
-            <h2 class="text-center">About Us</h2>
+            <h2 class="text-center">Choose our German Language School</h2>
             <div class="row row-cols-md-2 pt-3">
                 <div class="bg-img" style="background-image: url('./asset/img/school.jpg');"></div>
                 <div>
@@ -184,13 +175,65 @@
                         We provide comprehensive training and guidance to empower our students to excel in their careers and seamlessly integrate into the German skilled workers market and meet various university-level language requirements.
                     </p>
                     <p>
-                        Prima offers an ideal learning environment in the heart of FCT Abuja, equipped with a reliable power supply and internet access for your studies.
+                        Prima Prima German Language School offers an ideal learning environment in the heart of FCT Abuja, equipped with reliable power supply and internet access for your studies.
                     </p>
                     <p>
-                        Tutoring sessions are conducted in small, friendly classes accommodating 4 to 10 students at the same language proficiency level. Our programs are designed to be hybrid, combining digital and face-to-face instruction.
+                        Tutoring sessions are conducted in small, friendly classes accommodating 5 to 10 students at the same language proficiency level. Our programs are designed to be hybrid, combining digital and face-to-face instruction.
                     </p>
-                    <p>We've also developed special digital tools to enhance your listening comprehension, speaking, writing, and reading skills in the German language. For beginners, our goal is to reach German Language level A1. Others will undergo standardized
+                    <p>We have also developed special digital tools to enhance your listening comprehension, speaking, writing, and reading skills in the German language. For beginners, our goal is to reach German Language level A1. Others will undergo standardized
                         tests to determine their appropriate class placement.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--courses type-->
+    <section id="courses" class="bg-dark text-light text-center">
+        <div class="container pt-3 pb-3">
+            <!--<h2>Choose our German Language School</h2>-->
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2 pt-3 pb-3">
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-header bg-warning">
+                            <h5 class="card-title">Study in Germany and Austria</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Access world-class education with low tuition fees for all degrees and trade schools <br> Learning German opens doors for Nigerians to prestigious institutions and bright academic prospects</p>
+                        </div>
+                        <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-header bg-warning">
+                            <h5 class="card-title">Powerful Economy</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and the global job market</p>
+                        </div>
+                        <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-header bg-warning">
+                            <h5 class="card-title">All Levels, Expert Preparation</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">From A1 to C1, we cater to all levels <br>Our courses prepare you for exams by Goethe Institute and others, earning you internationally recognised certificates </p>
+                        </div>
+                        <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100">
+                        <div class="card-header bg-warning">
+                            <h5 class="card-title">Visa Success</h5>
+                        </div>
+                        <div class="card-body">
+                            <p class="card-text">Navigating visas for work or higher education? We guide you on the required language levels for success</p>
+                        </div>
+                        <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
+                    </div>
                 </div>
             </div>
         </div>
@@ -222,7 +265,7 @@
                     <div class="card h-100">
                         <img src="./asset/img/gabi.JPG" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Ms Gabi</h5>
+                            <h5 class="card-title">Ms. Gabi</h5>
                             <p class="card-text">Teacher</p>
                         </div>
                     </div>
@@ -231,7 +274,7 @@
                     <div class="card h-100">
                         <img src="./asset/img/Maria.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
-                            <h5 class="card-title">Ms Maria</h5>
+                            <h5 class="card-title">Ms. Maria</h5>
                             <p class="card-text">Teacher</p>
                         </div>
                     </div>
@@ -267,58 +310,7 @@
         </div>
     </section>
 
-    <!--courses type-->
-    <section id="courses" class="bg-dark text-light text-center">
-        <div class="container pt-3 pb-3">
-            <h2>Choose our German Language School</h2>
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2 pt-3 pb-3">
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-header bg-warning">
-                            <h5 class="card-title">Study in Germany</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">Access world-class education with low tuition fees for all degrees and trade schools. Learning German opens doors for Nigerians to prestigious institutions and bright academic prospects.</p>
-                        </div>
-                        <div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-header bg-warning">
-                            <h5 class="card-title">Powerful Economy</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and the global job market.</p>
-                        </div>
-                        <div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-header bg-warning">
-                            <h5 class="card-title">All Levels, Expert Preparation</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">From A1 to C1, we cater to all levels. Our courses prepare you for exams by Goethe Institute and others, earning you internationally recognised certificates. </p>
-                        </div>
-                        <div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card h-100">
-                        <div class="card-header bg-warning">
-                            <h5 class="card-title">Visa Success</h5>
-                        </div>
-                        <div class="card-body">
-                            <p class="card-text">Navigating visas for work or higher education? We guide you on the required language levels for success.</p>
-                        </div>
-                        <div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+
 
     <!-- Contact -->
     <section id="contact" class="bg-light">
