--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                         <a class="nav-link" href="#info">Info</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#info">Price</a>
+                        <a class="nav-link" href="#price">Price</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About us</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#info">Application</a>
@@ -41,7 +44,7 @@
     <!-- end nav-bar -->
 
     <!-- home-page -->
-    <section id="home" class="bg-light mt-5 pt-3">
+    <section id="home" class="bg-light mt-5">
         <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
@@ -52,30 +55,30 @@
             <div class="carousel-inner">
                 <div class="carousel-item carousel-image bg-img-1 active">
                     <div class="carousel-caption d-md-block d-xs-block">
-                        <p class="p-size">Guten Tag! Wilkommen bei der</p>
+                        <p class="p-size">Guten Tag! Willkommen bei der</p>
                         <h1>Prima German Language School in Abuja!</h1>
-                        <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
+                        <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-2">
                     <div class="carousel-caption d-md-block">
-                        <h1>Prima German Language school</h1>
+                        <h1>Prima German Language School</h1>
                         <p class="p-size">Unlock Opportunities with Our German Language School in Abuja!</p>
-                        <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
+                        <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-3">
                     <div class="carousel-caption d-md-block">
                         <h1>Ready to turbocharge your career or academic path? </h1>
                         <p class="p-size">Prima German Language School got you covered </p>
-                        <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
+                        <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
                     </div>
                 </div>
                 <div class="carousel-item carousel-image bg-img-4">
                     <div class="carousel-caption d-md-block">
                         <h1>Participate more Effectively and Responsibly in a Multi-Cultural World </h1>
                         <p class="p-size">Prima German Language School got you covered </p>
-                        <a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>
+                        <!--<a href=""><button type="button" class="btn btn-warning">APPLY NOW</button></a>-->
                     </div>
                 </div>
             </div>
@@ -91,7 +94,7 @@
     </section>
 
     <!-- info-page -->
-    <section id="info" class="bg-dark text-light">
+    <section id="info" class="bg-dark text-light mt-5 pt-3">
         <div class="container pt-3 bg-dark pt-5 pb-3">
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
@@ -108,17 +111,17 @@
                                 </div>
                             </div>
                             <div class="card-items">
+                                <i class="bi bi-patch-check-fill"></i>
+                                <div class="bdy1">
+                                    <h5>Exam Preparation</h5>
+                                    <p>We specifically prepare for exams and language certificates</p>
+                                </div>
+                            </div>
+                            <div class="card-items">
                                 <i class="bi bi-people-fill"></i>
                                 <div class="bdy1">
                                     <h5>Team</h5>
                                     <p>Our team of teachers consists of mother tongue speakers and experienced professionals</p>
-                                </div>
-                            </div>
-                            <div class="card-items">
-                                <i class="bi bi-patch-check-fill"></i>
-                                <div class="bdy1">
-                                    <h5>Exam Preparation</h5>
-                                    <p>We specifically prepare for exams and language certificate</p>
                                 </div>
                             </div>
                         </div>
@@ -127,7 +130,7 @@
                 <div class="col">
                     <div class="card row-col-md-4 h-100">
                         <div class="card-header">
-                            <h5>Course Length and Structure</h5>
+                            <h5>Course Duration Structure Prices</h5>
                         </div>
                         <div class="card-body text-left">
                             <p class="card-text">Interview to tailor your course to individual language level of the student.</p>
@@ -142,12 +145,15 @@
                                         <a href="">primaglsa01@gmail.com</a>
                                     </div>
                                 </div>
-                                <div class="card-contact mt-4">
-                                    <i class="bi bi-telephone-fill"></i>
-                                    <div class="bdy1">
+                                <div class="card-contact mt-4 ">
+                                    <i class="bi bi-telephone-fill "></i>
+                                    <div class="num-con ">
                                         <h5>Phone</h5>
-                                        <a href="#" class="text-dark">+2348033678987</a>
-                                        <a href="#" class="text-dark">+4917631056543</a>
+                                        <div>
+                                            <strong><p>Nigeria:</p></strong><a href="# " class="text-dark ">+234 803 3678 987</a></div>
+                                        <br/>
+                                        <div>
+                                            <strong><p>German:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
                                     </div>
                                 </div>
                             </div>
@@ -158,36 +164,84 @@
 
         </div>
     </section>
+    <!--Price-page-->
+    <section id="price" class="bg-dark text-light mt-5 pt-3">
+        <div class="container pt-5 pd-3 text-center">
+            <h2>Course Levels and Duration</h2>
+            <table class="table table-hover pt-3 text-center">
+                <thead>
+                    <tr>
+                        <th scope="col">Course</th>
+                        <th scope="col">Level</th>
+                        <th scope="col">Duration (Hours/Week)</th>
+                        <th scope="col">Duration (Weeks)</th>
+                        <th scope="col">Price (<span>&#8358;</span>)</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th scope="row">A1</th>
+                        <td>Beginners</td>
+                        <td>160hrs</td>
+                        <td>10 Weeks</td>
+                        <td>729,000</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">A2</th>
+                        <td>Intermediate</td>
+                        <td>160hrs</td>
+                        <td>10 Weeks</td>
+                        <td>729,000</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">B1</th>
+                        <td>Intermediate</td>
+                        <td>160hrs</td>
+                        <td>10 Weeks</td>
+                        <td>729,000</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">C1</th>
+                        <td>Advanced</td>
+                        <td>160hrs</td>
+                        <td>10 Weeks</td>
+                        <td>729,000</td>
+                    </tr>
 
+                </tbody>
+            </table>
+        </div>
+    </section>
     <!-- about-us -->
-    <section id="about" class="bg-dark text-light">
-        <div class="container pt-3 pb-3">
+    <section id="about" class="bg-dark text-light  mt-5 pt-3">
+        <div class="container pt-5 pb-3">
             <h2 class="text-center">Choose our German Language School</h2>
             <div class="row row-cols-md-2 pt-3">
                 <div class="bg-img" style="background-image: url('./asset/img/school.jpg');"></div>
                 <div>
-                    <p>At Prima German Language School, we are dedicated to achieving high rates of success in learning the German language by implementing effective and enjoyable modern teaching techniques.
+                    <p>At <span class="prima">Prima</span> German Language School, we are dedicated to achieving high rates of success in learning the German language by implementing effective and enjoyable modern teaching techniques.
                     </p>
                     <p>
                         Our team of Nigerian and native German tutors boasts a proven track record in teaching German as a foreign language, ensuring the successful completion of your targeted language levels.
                     </p>
                     <p>
-                        We provide comprehensive training and guidance to empower our students to excel in their careers and seamlessly integrate into the German skilled workers market and meet various university-level language requirements.
+                        We provide comprehensive training and guidance to empower our students to excel in their careers and integrate into the German skilled workers market to meet various university-level language requirements.
                     </p>
                     <p>
-                        Prima Prima German Language School offers an ideal learning environment in the heart of FCT Abuja, equipped with reliable power supply and internet access for your studies.
+                        <span class="prima">Prima</span> German Language School offers an ideal learning environment in the heart of FCT Abuja, equipped with reliable power supply and internet access for your studies.
                     </p>
                     <p>
-                        Tutoring sessions are conducted in small, friendly classes accommodating 5 to 10 students at the same language proficiency level. Our programs are designed to be hybrid, combining digital and face-to-face instruction.
+                        Tutoring sessions are conducted in small, friendly classes accommodating 5 to 10 students at the same language proficiency level. Our programmes are designed to be hybrid, combining digital and face-to-face instruction.
                     </p>
-                    <p>We have also developed special digital tools to enhance your listening comprehension, speaking, writing, and reading skills in the German language. For beginners, our goal is to reach German Language level A1. Others will undergo standardized
-                        tests to determine their appropriate class placement.</p>
+                    <p>We have also developed special digital tools to enhance your listening comprehension, speaking, writing, and reading skills. For beginners, our goal is to reach German Language level A1. Others will undergo standardised tests to determine
+                        their appropriate class placement.
+                    </p>
                 </div>
             </div>
         </div>
     </section>
     <!--courses type-->
-    <section id="courses" class="bg-dark text-light text-center">
+    <section id="courses" class="bg-dark text-light">
         <div class="container pt-3 pb-3">
             <!--<h2>Choose our German Language School</h2>-->
             <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-2 pt-3 pb-3">
@@ -197,7 +251,9 @@
                             <h5 class="card-title">Study in Germany and Austria</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Access world-class education with low tuition fees for all degrees and trade schools <br> Learning German opens doors for Nigerians to prestigious institutions and bright academic prospects</p>
+                            <p class="card-text">Access world-class education with the lowest tuition fees in the European Union! Apply for various degree levels in over 600 state and private institutions. <br>For Nigerians: learning German opens doors to these prestigious
+                                institutions and bright academic prospects
+                            </p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -205,10 +261,10 @@
                 <div class="col">
                     <div class="card h-100">
                         <div class="card-header bg-warning">
-                            <h5 class="card-title">Powerful Economy</h5>
+                            <h5 class="card-title">Powerful Economies</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and the global job market</p>
+                            <p class="card-text">Mastering German makes you a standout candidate in Germany's and Austria's striving economy and job markets</p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -216,10 +272,10 @@
                 <div class="col">
                     <div class="card h-100">
                         <div class="card-header bg-warning">
-                            <h5 class="card-title">All Levels, Expert Preparation</h5>
+                            <h5 class="card-title">Expert Preparation: All Levels</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">From A1 to C1, we cater to all levels <br>Our courses prepare you for exams by Goethe Institute and others, earning you internationally recognised certificates </p>
+                            <p class="card-text">From A1 to C1, Prima caters to all levels. Our courses prepare you for exams by the Goethe Institute and others, earning you internationally recognized Language Proficiency certificates </p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -230,7 +286,9 @@
                             <h5 class="card-title">Visa Success</h5>
                         </div>
                         <div class="card-body">
-                            <p class="card-text">Navigating visas for work or higher education? We guide you on the required language levels for success</p>
+                            <p class="card-text">Language Certificates are required for Students and Skilled Work Visa applications<br> We advise you on the language levels needed for your success and career.<br> <strong>Special Consultation:</strong> Individual consultation
+                                can be booked for University and Job Applications, time frames, and fees
+                            </p>
                         </div>
                         <!--<div class="card-footer"> <a href="#"><button type="button" class="btn btn-dark">GET INFO</button></a></div>-->
                     </div>
@@ -239,7 +297,7 @@
         </div>
     </section>
     <!--Our Team-->
-    <section id="team" class="bg-dark text-light">
+    <section id="team" class="bg-dark text-light  mt-5 pt-3">
         <div class="container pt-3 pb-3">
             <h2 class="text-center">Our Team</h2>
             <div class="row row-cols-2 row-cols-md-4 row-cols-sm-3 row-cols-lg-6 g-2 pt-3">
@@ -284,7 +342,7 @@
                         <img src="./asset/img/ida.JPG" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Ida</h5>
-                            <p class="card-text">Assistant Teacher</p>
+                            <p class="card-text">Teachers's Assistant</p>
                         </div>
                     </div>
                 </div>
@@ -313,11 +371,11 @@
 
 
     <!-- Contact -->
-    <section id="contact" class="bg-light">
+    <section id="contact" class="bg-light  mt-5 pt-3">
         <div class="container pt-3 pb-3">
             <div class="text-center mb-3">
                 <h2>Contact</h2>
-                <h6>For more info/inquiries please contact the Admin</h6>
+                <h6>For more info/inquiries please contact the Admin Office</h6>
             </div>
             <div class="row row-cols-1 row-cols-md-2 g-4 pb-5 ">
                 <div class="col">
@@ -334,9 +392,11 @@
                                 <i class="bi bi-telephone-fill "></i>
                                 <div class="num-con ">
                                     <h5>Phone</h5>
-                                    <a href="# " class="text-dark ">+2348033678987</a>
+                                    <div>
+                                        <strong><p>Nigeria:</p></strong><a href="# " class="text-dark ">+234 803 3678 987</a></div>
                                     <br/>
-                                    <a href="# " class="text-dark ">+4917631056543</a>
+                                    <div>
+                                        <strong><p>German:</p></strong><a href="# " class="text-dark ">+491 763 1056 543</a></div>
                                 </div>
                             </div>
                         </div>
