More Options for the table

--- a/index.html
+++ b/index.html
@@ -201,6 +201,13 @@
                         <td>729,000</td>
                     </tr>
                     <tr>
+                        <th scope="row">B2</th>
+                        <td>Advanced</td>
+                        <td>160hrs</td>
+                        <td>10 Weeks</td>
+                        <td>729,000</td>
+                    </tr>
+                    <tr>
                         <th scope="row">C1</th>
                         <td>Advanced</td>
                         <td>160hrs</td>
