--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                     <tr>
                         <th scope="col">Course</th>
                         <th scope="col">Level</th>
-                        <th scope="col">Duration (Hours/Week)</th>
+                        <th scope="col">Total Hours</th>
                         <th scope="col">Duration (Weeks)</th>
                         <th scope="col">Price (<span>&#8358;</span>)</th>
                     </tr>
